src/objects/Moves__c.object
<CustomObject>
    <description>Displays information about the characters moves</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Smash Attack</fullName>
                </value>
                <value>
                    <fullName>Grab</fullName>
                </value>
                <value>
                    <fullName>Throw</fullName>
                </value>
                <value>
                    <fullName>Aerial</fullName>
                </value>
                <value>
                    <fullName>Special</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Character__c</fullName>
        <description>Defines the relationship between characters and moves</description>
        <label>Character</label>
        <referenceTo>Character__c</referenceTo>
        <relationshipLabel>Moves</relationshipLabel>
        <relationshipName>Moves</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Damage__c</fullName>
        <description>Displays the damage applied by the move</description>
        <label>Damage</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Active_Frame__c</fullName>
        <label>First Active Frame</label>
        <precision>17</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Move_Name__c</fullName>
        <label>Move Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Move_Type__c</fullName>
        <label>Move Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jab</fullName>
                </value>
                <value>
                    <fullName>Dash Attack</fullName>
                </value>
                <value>
                    <fullName>Forward Tilt</fullName>
                </value>
                <value>
                    <fullName>Up Tilt</fullName>
                </value>
                <value>
                    <fullName>Down Tilt</fullName>
                </value>
                <value>
                    <fullName>Forward Smash</fullName>
                </value>
                <value>
                    <fullName>Up Smash</fullName>
                </value>
                <value>
                    <fullName>Down Smash</fullName>
                </value>
                <value>
                    <fullName>Standing Grab</fullName>
                </value>
                <value>
                    <fullName>Dash Grab</fullName>
                </value>
                <value>
                    <fullName>Pivot Grab</fullName>
                </value>
                <value>
                    <fullName>Forward Throw</fullName>
                </value>
                <value>
                    <fullName>Back Throw</fullName>
                </value>
                <value>
                    <fullName>Up Throw</fullName>
                </value>
                <value>
                    <fullName>Down Throw</fullName>
                </value>
                <value>
                    <fullName>Neutral Air</fullName>
                </value>
                <value>
                    <fullName>Forward Air</fullName>
                </value>
                <value>
                    <fullName>Back Air</fullName>
                </value>
                <value>
                    <fullName>Up Air</fullName>
                </value>
                <value>
                    <fullName>Down Air</fullName>
                </value>
                <value>
                    <fullName>Neutral Special</fullName>
                </value>
                <value>
                    <fullName>Side Special</fullName>
                </value>
                <value>
                    <fullName>Up Special</fullName>
                </value>
                <value>
                    <fullName>Down Special</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Up_Frame__c</fullName>
        <label>Start Up Frame</label>
        <precision>17</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Moves</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Character__c</columns>
        <columns>Category__c</columns>
        <columns>Move_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>M-{00000}</displayFormat>
        <label>Move</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Moves</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>